<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gov.nist.drmf.interpreter</groupId>
    <artifactId>interpreter</artifactId>
    <packaging>pom</packaging>
    <name>Semantic Translator</name>
    <version>2.1-SNAPSHOT</version>

    <modules>
        <module>interpreter.core</module>
        <module>interpreter.cas</module>
        <module>interpreter.maple</module>
        <module>interpreter.mathematica</module>
        <module>interpreter.roundtrip</module>
        <module>interpreter.semantic</module>
    </modules>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maple.path>/opt/maple2016</maple.path>
        <mlp.path>${project.basedir}/../libs/MLP/MLP.jar</mlp.path>
        <junit.launcher.version>1.5.2</junit.launcher.version>
        <junit.version>5.5.2</junit.version>
        <log4j2.version>2.12.1</log4j2.version>
    </properties>

    <dependencies>
        <!-- We use JUnit5 -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.launcher.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency> <!-- Necessary for Parameter Tests -->
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency> <!-- Necessary for IntelliJ -->
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Logging via log4j2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <workingDirectory>${basedir}/../</workingDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </build>

    <!--<build>-->
    <!--<plugins>-->
    <!--<plugin>-->
    <!--<artifactId>maven-surefire-plugin</artifactId>-->
    <!--<version>2.19</version>-->
    <!--<dependencies>-->
    <!--<dependency>-->
    <!--<groupId>org.junit.platform</groupId>-->
    <!--<artifactId>junit-platform-surefire-provider</artifactId>-->
    <!--<version>1.0.0-M5</version>-->
    <!--</dependency>-->
    <!--<dependency>-->
    <!--<groupId>org.junit.jupiter</groupId>-->
    <!--<artifactId>junit-jupiter-engine</artifactId>-->
    <!--<version>5.0.0-M5</version>-->
    <!--</dependency>-->
    <!--</dependencies>-->
    <!--<configuration>-->
    <!--<workingDirectory>${basedir}/../</workingDirectory>-->
    <!--</configuration>-->
    <!--</plugin>-->
    <!--</plugins>-->
    <!--</build>-->
</project>
